Fixed layout issues on map

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,3 @@
-/*font-family: 'Abril Fatface', cursive;
-font-family: 'News Cycle', sans-serif;*/
 #map {
     height: 100vh;
 } 
@@ -16,9 +14,5 @@ font-family: 'News Cycle', sans-serif;*/
 
 .mdl-card__media img {
     width: 100%;
-}
-
-.mdl-textfield {
-    background: "#BOBEC5";
 }
 
